# pdfaker

./: README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: pytest.yml
src/pdfaker/: main.py
tests/: test_main.py
